--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,67 +1,4 @@
+@import "global/global.scss";
+@import "section/header.scss";
+@import "section/highlights.scss";
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-
-}
-.container {
-    max-width: 1234px;
-    margin-right: auto;
-    padding: 0 20px;
-    margin-left: auto;
-} 
-
-.highlights {
-    padding: 100px 0;
-    .col-wrapper {
-        display: flex;
-        flex-flow: row wrap;
-        .col-two {
-            flex: 0 0 50%;
-            max-width: 50%;
-            &.small-card {
-                .card-wrap {
-                    span {
-                        display: block;
-                    }
-                    display: flex;
-                    margin-bottom: 20px;
-                    
-                }
-            }
-            .card-wrap {
-                margin: 0 10px;
-                border-radius: 10px;
-                box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.15);
-                overflow: hidden;
-                .img-wrap {
-                    max-width: 600px;
-                    height: 400px;
-                    img {
-                        width: 100%;
-                        height: 100%;
-                        object-fit: cover;
-                    }
-                }
-                .content-wrap {
-                    padding: 20px;
-                    span {
-                        display: block;
-                        margin: 8px 0;
-                    }
-                    .text-wrap {
-                        min-height: 240px;
-                        display: flex;
-                        align-content: flex-end;
-                        flex-wrap: wrap;
-                        margin: 8px 0;
-                    }
-                    a {
-                        margin: 10px 10px 10px 0;
-                    }
-                }
-            }
-        }
-    }
-}
